[package]
name = "bevy-gravity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0", features=["default_font"] }
bevy_egui = "0.28.0"
egui_extras = "0.28.1"
bevy_mod_picking = { version = "0.20.1", features=["selection"] }
itertools = "0.13.0"
crossbeam-channel = "0.5.12"
nbody_barnes_hut = "0.1.0"
bevy_vector_shapes = "0.8.0"
rayon = "1.10.0"
bincode = "1.3.3"
rand = "0.8.5"
